[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "DSSG-Monitor"
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.12",
]
description = "DSSG modular metric exporter to a Prometheus time series database"
dynamic = ["version"]
dependencies = [
    "pyyaml",
    "prometheus_client"
]

[project.optional-dependencies]
system_usage = [
    "psutil"
]
temperature = [] # placeholder for future module dependencies

[project.scripts]
dssg-monitor = "dssg_monitor.main:main"

[tool.setuptools]
packages = ["dssg_monitor"]
