[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "dssg-monitor"
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
]
description = "DSSG modular metric exporter to a Prometheus time series database"
dynamic = ["version"]
dependencies = [
    "pyyaml",
    "prometheus_client"
]

[project.optional-dependencies]
system_usage = [
    "psutil"
]
temperature = [
    "pathlib",
    "odin_devices @ git+https://git@github.com/stfc-aeg/odin-devices@1.1.0",
    "spidev==3.6"
] 

[project.scripts]
dssg-monitor = "src.dssg_monitor.main:main"

[tool.setuptools]
packages = ["src.dssg_monitor"]